--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: php
 php:
   - 5.3
   - 5.4
-
+before_script: cd php/tests && wget http://downloads.sourceforge.net/project/simpletest/simpletest/simpletest_1.1/simpletest_1.1.0.tar.gz && tar xvf simpletest_1.1.0.tar.gz
 script: php php/tests/index.php
