--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "quail",
+  "description": "A javascript content accessibility checker.",
+  "homepage": "http://quail-lib.org",
   "version": "0.0.0-ignored",
   "engines": {
     "node": ">= 0.6.0"
@@ -12,5 +14,11 @@
   },
   "scripts": {
     "test": "grunt travis --verbose"
+  },
+  "jam": {
+    "dependencies": {
+      "jquery": ">1.4.2",
+      "underscore": ">1.3.1"
+    },
   }
 }
