--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quail",
   "description": "A javascript content accessibility checker.",
-  "homepage": "http://quail-lib.org",
+  "homepage": "http://quailjs.org",
   "version": "0.0.0-ignored",
   "engines": {
     "node": ">= 0.6.0"
