--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "grunt qunit"
   },
   "devDependencies": {
-    "grunt": "~0.3.15"
+    "grunt": "~0.4.x"
   },
   "scripts": {
     "test": "grunt travis --verbose"
