Fix Travis config for Grunt 0.4
Needs grunt-cli as a global instead

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
-  - 0.9
+  - 0.8
 
-before_script:
-  - npm install grunt -g
-
-script:
-  - grunt travis
+install:
+  - npm install grunt-cli -g
+  - npm install
