--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-contrib-jshint": "~0.2.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-cli": "~0.1.6"
   },
   "jam": {
     "dependencies": {
