--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "node": ">= 0.6.0"
   },
   "scripts": {
-    "test": "grunt travis --verbose"
+    "test": "grunt test --verbose"
   },
   "devDependencies": {
-    "grunt": "~0.4.x",
+    "grunt": "~0.4.1",
     "grunt-contrib-qunit": "~0.2.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-uglify": "~0.1.2",
-    "grunt-contrib-jshint": "~0.2.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-cli": "~0.1.6"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-watch": "~0.3.1"
   },
   "jam": {
     "dependencies": {
