--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ _site/*
 examples/wysiwyg/editors/aloha/*
 examples/wysiwyg/editors/tinymce/*
 examples/wysiwyg/editors/ckeditor/*
+examples/wysiwyg/editors/ckeditor4/*
 _site
 node_modules/*
 utilities/printTable.php
