--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-watch": "~0.3.1",
     "grunt-shell": "~0.5.0",
-    "grunt-contrib-clean": "~0.4.0"
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "jam": {
     "dependencies": {
