Some formatting fixes.

--- a/src/resources/guidelines/wcag.yml
+++ b/src/resources/guidelines/wcag.yml
@@ -252,7 +252,7 @@
     1.3.3: 
       id: "content-structure-separation-understanding"
       title: "Sensory Characteristics"
-      description: "Instructions provided for understanding\nand operating content do not rely solely on sensory characteristics of components such as shape, size, visual location, orientation, or sound."
+      description: "Instructions provided for understandingand operating content do not rely solely on sensory characteristics of components such as shape, size, visual location, orientation, or sound."
       uri: "http://www.w3.org/TR/WCAG20/#content-structure-separation-understanding"
       techniques: 
         - "F14"
@@ -996,7 +996,7 @@
     F1: "Failure of Success Criterion 1.3.2 due to changing the meaning of content by positioning information with CSS"
     F2: "Failure of Success Criterion 1.3.1 due to using changes in text presentation to convey information without using the appropriate markup or text"
     F3: "Failure of Success Criterion 1.1.1 due to using CSS to include images that convey important information"
-    F4: "Failure of Success Criterion 2.2.2 due to using text-decoration:blink without a mechanism to stop it in less than five seconds"
+    F4: "Failure of Success Criterion 2.2.2 due to using text-decoration:b link without a mechanism to stop it in less than five seconds"
     F7: "Failure of Success Criterion 2.2.2 due to an object or applet, such as Java or Flash, that has blinking content without a mechanism to pause the content that blinks for more than five seconds"
     F8: "Failure of Success Criterion 1.2.2 due to captions omitting some dialogue or important sound effects"
     F9: "Failure of Success Criterion 3.2.5 due to changing the context when the user removes focus from a form element"
@@ -1014,7 +1014,12 @@
     F22: "Failure of Success Criterion 3.2.5 due to opening windows that are not requested by the user"
     F23: "Failure of  1.4.2 due to playing a sound longer than 3 seconds where there is no mechanism to turn it off"
     F24: "Failure of Success Criterion 1.4.3, 1.4.6 and 1.4.8 due to specifying foreground colors without specifying background colors or vice versa"
-    F25: "Failure of Success Criterion 2.4.2 due to the title of a Web page not identifying the contents"
+    F25:
+      description: "Failure of Success Criterion 2.4.2 due to the title of a Web page not identifying the contents"
+      tests:
+        - documentTitleIsNotPlaceholder
+        - documentTitleNotEmpty
+        - documentTitleDescribesDocument
     F26:
       description: "Failure of Success Criterion 1.3.3 due to using a graphical symbol alone to convey information"
       tests:
@@ -1031,11 +1036,11 @@
     F37: "Failure of Success Criterion 3.2.2 due to launching a new window without prior warning when the status of a radio button, check box or select list is changed"
     F38: "Failure of Success Criterion 1.1.1 due to omitting the alt-attribute for non-text content used for decorative purposes only in HTML"
     F39: "Failure of Success Criterion 1.1.1 due to providing a text alternative that is not null (e.g., alt='spacer' or alt='image') for images that should be ignored by assistive technology"
-    F40: "Failure of Success Criterion 2.2.1 and 2.2.4 due to using meta redirect with a time limit\n        "
+    F40: "Failure of Success Criterion 2.2.1 and 2.2.4 due to using meta redirect with a time limit"
     F41: "Failure of Success Criterion 2.2.1, 2.2.4, and 3.2.5 due to using meta refresh with a time-out"
     F42: "Failure of Success Criterion 1.3.1 and 2.1.1 due to using scripting events to emulate links in a way that is not programmatically determinable"
     F43: "Failure of Success Criterion 1.3.1 due to using structural markup in a way that does not represent relationships in the content"
-    F44: "Failure of Success Criterion 2.4.3 due to using tabindex to create a tab order that\n        does not preserve meaning and operability"
+    F44: "Failure of Success Criterion 2.4.3 due to using tabindex to create a tab order that        does not preserve meaning and operability"
     F46: "Failure of Success Criterion 1.3.1 due to using th elements, caption elements, or non-empty summary attributes in layout tables"
     F47: "Failure of Success Criterion 2.2.2 due to using the blink element"
     F48: "Failure of Success Criterion 1.3.1 due to using the pre element to markup tabular information"
@@ -1262,13 +1267,13 @@
     H4: "Creating a logical tab order through links, form controls, and objects"
     H24: " Providing text alternatives for the area elements of image maps "
     H25: "Providing a title using the title element"
-    H27: "Providing text and non-text alternatives for object\n"
+    H27: "Providing text and non-text alternatives for object"
     H28: "Providing definitions for abbreviations by using the abbr and acronym elements"
     H30: "Providing link text that describes the purpose of a link for anchor elements"
     H32: "Providing submit buttons"
     H33: "Supplementing link text with the title attribute"
     H34: "Using a Unicode right-to-left mark (RLM) or left-to-right mark (LRM) to mix textdirection inline"
-    H35: " Providing text alternatives on applet elements "
+    H35: "Providing text alternatives on applet elements "
     H36: "Using alt attributes on images used as submit buttons"
     H37: "Using alt attributes on img elements"
     H39: "Using caption elements to associate data table captions with data tables"
@@ -1277,14 +1282,14 @@
     H43: "Using id and headers attributes to associate data cells with header cells indata tables"
     H44: "Using label elements to associate text labels with form controls"
     H45: "Using longdesc"
-    H46: "Using noembed with embed\n"
+    H46: "Using noembed with embed"
     H48: "Using ol, ul and dl for lists or groups of links"
     H49: "Using semantic markup to mark emphasized or special text"
     H51: "Using table markup to present tabular information"
     H53: "Using the body of the object element"
     H54: "Using the dfn element to identify the defining instance of a word"
-    H56: "Using the dir attribute on an inline element to resolve problemswith nested directional runs"
-    H57: " Using language attributes on the html element "
+    H56: "Using the dir attribute on an inline element to resolve problems with nested directional runs"
+    H57: "Using language attributes on the html element "
     H58: "Using language attributes to identify changes in the human language "
     H59: "Using the link element and navigation tools"
     H60: "Using the link element to link to a glossary"
@@ -1295,16 +1300,16 @@
     H67: "Using null alt text and no title attribute on img elements for images that ATshould ignore"
     H69: "Providing heading elements at the beginning of each section of content"
     H70: "Using frame elements to group blocks of repeated material"
-    H71: " Providing a description for groups of form controls using fieldset and legendelements "
+    H71: "Providing a description for groups of form controls using fieldset and legendelements "
     H73: "Using the summary attribute of the table element to give an overview of datatables"
     H74: "Ensuring that opening and closing tags are used according to specification"
     H75: "Ensuring that Web pages are well-formed"
     H76: "Using meta refresh to create an instant client-side redirect"
-    H77: "Identifying the purpose of a link using link text combined with its enclosinglist item"
-    H78: "Identifying the purpose of a link using link text combined with its enclosingparagraph"
-    H79: "Identifying the purpose of a link using link text combined with its enclosingtable cell and associated table headings"
-    H80: "Identifying the purpose of a link using link text combined with the precedingheading element"
-    H81: "Identifying the purpose of a link in a nested list using link text combined withthe parent list item under which the list is nested"
+    H77: "Identifying the purpose of a link using link text combined with its enclosing list item"
+    H78: "Identifying the purpose of a link using link text combined with its enclosing paragraph"
+    H79: "Identifying the purpose of a link using link text combined with its enclosing table cell and associated table headings"
+    H80: "Identifying the purpose of a link using link text combined with the preceding heading element"
+    H81: "Identifying the purpose of a link in a nested list using link text combined with the parent list item under which the list is nested"
     H83: "Using the target attribute to open a new window on user request and indicating this in link text"
     H84: "Using a button with a select element to perform an action"
     H85: "Using OPTGROUP to group OPTION elements inside a SELECT"
@@ -1323,7 +1328,7 @@
     T1: "Using standard text formatting conventions for paragraphs"
     T2: "Using standard text formatting conventions for lists"
     T3: "Using standard text formatting conventions for headings"
-    SCR1: "Allowing the user to extend the default time limit\n        "
+    SCR1: "Allowing the user to extend the default time limit"
     SCR2: "Using redundant keyboard and mouse event handlers"
     SCR14: "Using scripts to make nonessential alerts optional"
     SCR16: "Providing a script that warns the user a time limit is about to expire"
@@ -1350,7 +1355,7 @@
     SL1: "Accessing Alternate Audio Tracks in Silverlight Media"
     SL2: "Changing The Visual Focus Indicator in Silverlight"
     SL3: "Controlling Silverlight MediaElement Audio Volume"
-    SL4: "Declaring Discrete Silverlight Objects to Specify Language Parts\n    in the HTML DOM"
+    SL4: "Declaring Discrete Silverlight Objects to Specify Language Parts in the HTML DOM"
     SL5: "Defining a Focusable Image Class for Silverlight"
     SL6: "Defining a UI Automation Peer for a Custom Silverlight Control"
     SL7: "Designing a Focused Visual State for Custom Silverlight Controls"
@@ -1360,28 +1365,28 @@
     SL11: "Pausing or Stopping A Decorative Silverlight Animation"
     SL12: "Pausing, Stopping, or Playing Media in Silverlight MediaElements"
     SL13: "Providing A Style Switcher To Switch To High Contrast"
-    SL14: "Providing Custom Control Key Handling for Keyboard Functionality\n    in Silverlight"
-    SL15: "Providing Keyboard Shortcuts that Work Across the Entire Silverlight\n    Application"
+    SL14: "Providing Custom Control Key Handling for Keyboard Functionality in Silverlight"
+    SL15: "Providing Keyboard Shortcuts that Work Across the Entire Silverlight Application"
     SL16: "Providing Script-Embedded Text Captions for MediaElement Content"
-    SL17: "Providing Static Alternative Content for Silverlight Media Playing\n    in a MediaElement"
+    SL17: "Providing Static Alternative Content for Silverlight Media Playing in a MediaElement"
     SL18: "Providing Text Equivalent for Nontext Silverlight Controls With AutomationProperties.Name"
-    SL19: "Providing User Instructions With AutomationProperties.HelpText in\n    Silverlight"
+    SL19: "Providing User Instructions With AutomationProperties.HelpText in Silverlight"
     SL20: "Relying on Silverlight AutomationPeer Behavior to Set AutomationProperties.Name"
     SL21: "Replacing A Silverlight Timed Animation With a Nonanimated Element"
     SL22: "Supporting Browser Zoom in Silverlight"
-    SL23: "Using A Style Switcher to Increase Font Size of Silverlight Text\n    Elements"
+    SL23: "Using A Style Switcher to Increase Font Size of Silverlight Text Elements"
     SL24: "Using AutoPlay to Keep Silverlight Media from Playing Automatically"
-    SL25: "Using Controls and Programmatic Focus to Bypass Blocks of Content\n    in Silverlight"
+    SL25: "Using Controls and Programmatic Focus to Bypass Blocks of Content in Silverlight"
     SL26: "Using LabeledBy to Associate Labels and Targets in Silverlight"
-    SL27: "Using Language/Culture Properties as Exposed by Silverlight Applications\n    and Assistive Technologies"
+    SL27: "Using Language/Culture Properties as Exposed by Silverlight Applications and Assistive Technologies"
     SL28: "Using Separate Text-Format Text Captions for MediaElement Content"
-    SL29: "Using Silverlight 'List' Controls to Define Blocks that\n    can be Bypassed"
+    SL29: "Using Silverlight 'List' Controls to Define Blocks that    can be Bypassed"
     SL30: "Using Silverlight Control Compositing and AutomationProperties.Name"
     SL31: "Using Silverlight Font Properties to Control Text Presentation"
     SL32: "Using Silverlight Text Elements for Appropriate Accessibility Role"
     SL33: "Using Well-Formed XAML to Define a Silverlight User Interface"
-    SL34: "Using the Silverlight Default Tab Sequence and Altering Tab Sequences\n    With Properties"
-    SL35: "Using the Validation and ValidationSummary APIs to Implement Client\n    Side Forms Validation in Silverlight"
+    SL34: "Using the Silverlight Default Tab Sequence and Altering Tab Sequences With Properties"
+    SL35: "Using the Validation and ValidationSummary APIs to Implement Client Side Forms Validation in Silverlight"
     SM1: "Adding extended audio description in SMIL 1.0"
     SM2: "Adding extended audio description in SMIL 2.0"
     SM6: "Providing audio description in SMIL 1.0"
