--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-shell": "~0.5.0",
+    "grunt-convert": "~0.1.5",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3"
   },
