Added table format tests.

--- a/src/resources/guidelines/wcag.yml
+++ b/src/resources/guidelines/wcag.yml
@@ -1108,6 +1108,8 @@ techniques:
       - "blinkIsNotUsed"
   F48:
     description: "Failure of Success Criterion 1.3.1 due to using the pre element to markup tabular information"
+    tests:
+      - "preShouldNotBeUsedForTabularLayout"
   F49:
     description: "Failure of Success Criterion 1.3.2 due to using an HTML layout table that does not make sense when linearized  "
   F50:
@@ -1188,10 +1190,13 @@ techniques:
     description: "Failure of Success Criterion 1.3.1 for incorrectly associating table headers and content via the headers and id attributes"
   F91:
     description: "Failure of Success Criterion 1.3.1 for not correctly marking up table headers"
+    tests:
+      - "tableDataShouldHaveTh"
+      - "tableWithBothHeadersUseScope"
   FLASH1: 
     description: "Setting the name property for a non-text object"
-    tests :
-      - objectMustContainText
+    tests:
+      - "objectMustContainText"
   FLASH2: 
     description: "Setting the description property for a non-text object in Flash"
   FLASH3: 
