--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -708,7 +708,7 @@ frameTitlesNotPlaceholder:
   testability: 1
   type: placeholder
 framesHaveATitle: 
-  selector: "frame:not(frame[title])"
+  selector: "frame:not(frame[title]),iframe:not(iframe[title])"
   tags: 
     - deprecated
     - frame
