Mapped flicker, frame tests.

--- a/src/resources/guidelines/wcag.yml
+++ b/src/resources/guidelines/wcag.yml
@@ -1527,6 +1527,8 @@ techniques:
     description: "Providing a link to a text transcript of a prepared statement or script if the script is followed"
   G152:
     description: "Setting animated gif images to stop blinking after n cycles (within 5 seconds)"
+    tests:
+      - "imgGifNoFlicker"
   G153:
     description: "Making the text easier to read"
   G155:
@@ -1728,6 +1730,10 @@ techniques:
     description: "Using the scope attribute to associate header cells and data cells in datatables"
   H64:
     description: "Using the title attribute of the frame and iframe elements"
+    tests:
+      - "framesHaveATitle"
+      - "frameTitlesNotEmpty"
+      - "frameTitlesNotPlaceholder"
   H65:
     description: "Using the title attribute to identify form controls when the label elementcannot be used"
   H67:
