JSHint source files, not built versions
Added "quail" global to allow this

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,5 +10,8 @@
   "boss": true,
   "eqnull": true,
   "browser": true,
-  "jquery": true
+  "jquery": true,
+  "globals": {
+    "quail": true
+  }
 }
