--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://quailjs.org",
   "version": "2.0.3",
   "engines": {
-    "node": ">= 0.6.0"
+    "node": ">= 0.10.20"
   },
   "scripts": {
     "test": "grunt --verbose"
@@ -18,7 +18,8 @@
     "grunt-shell": "~0.5.0",
     "grunt-convert": "~0.1.5",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-gh-pages": "~0.8.1"
   },
   "jam": {
     "dependencies": {
